# django_tutorial

./: Procfile  README.md  log.py  manage.py  pyproject.toml  requirements.txt
educacionit/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: admin.py  forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_curso_turnos.py  0003_auto_20210108_0013.py
myapp/template2/: index2.html
myapp/templates/: about.html  cursos.html  index.html  layout.html  nuevo_curso.html
myapp/templates/cualquioera/: index.html
