[tool.poetry]
name = "django_educacionit"
version = "0.1.0"
description = ""
authors = ["Xavier Petit <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
